// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly unit is inches 1`] = `
<div>
  <div
    class="rect-options"
  >
    <div
      class="option-block"
    >
      <div
        class="label"
      >
        Rounded corner
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="0.0000"
        />
        <span
          class="unit"
        >
          in
        </span>
      </div>
    </div>
    <div>
      DummyInFillBlock
    </div>
  </div>
</div>
`;

exports[`should render correctly unit is not inches 1`] = `
<div>
  <div
    class="rect-options"
  >
    <div
      class="option-block"
    >
      <div
        class="label"
      >
        Rounded corner
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="1.00"
        />
        <span
          class="unit"
        >
          mm
        </span>
      </div>
    </div>
    <div>
      DummyInFillBlock
    </div>
  </div>
</div>
`;
